Oops fix logo alignment on mobile

--- a/src/style/theme.css
+++ b/src/style/theme.css
@@ -81,6 +81,7 @@ nav #hamburger, nav label {
     }
     nav {
         flex-direction: column;
+        align-items: center;
     }
     nav > a {
         display: none;
